--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -34,10 +34,13 @@
                 font-size: 14px;
                 color:  #000
             }
+            .tadiva{
+                background-image: url("resources/petshopimg.jpg");
+            }
         </style>
     </h:head>
-    <h:body>
-         petshop SAYFASI GİRİŞ PANELİ (KULLANICI ADI "admin" PAROLA "1234")
+    <h:body styleClass="tadiva">
+          PETSHOP SAYFASI GİRİŞ PANELİ (KULLANICI ADI "admin" PAROLA "1234")
          <div id="login-panel">
               <h:form>
                   <table>
